Fix font size on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,23 +13,35 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
-  margin-bottom: 0.7rem;
+  font-size: 2.7rem;
+  margin: 0 1.5rem 0.7rem 1.5rem;
+
+  @media screen and (min-width: 800px) {
+    font-size: 3rem;
+    margin: 0 0 0.7rem 0;
+  }
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  margin: 0 1.5rem;
+
+  @media screen and (min-width: 800px) {
+    font-size: 1.5rem;
+    margin: initial;
+  }
 }
 
 input {
   color: #fff;
   border: none;
   background-color: transparent;
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin: 0 0 1.5rem 0;
 
   @media screen and (min-width: 800px) {
     margin: 0 1.5rem 0 0;
+    font-size: 2.5rem;
   }
 }
 
